[package]
name = "accumulators"
version = "0.0.1"
authors = ["dignifiedquire <dignifiedquire@gmail.com>, organism <hello@organism.ai>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/stichtingorganism/accumulators"
repository = "https://github.com/stichtingorganism/accumulators"

keywords = []

[dependencies]
num-bigint = { version = "0.2", features = ["rand", "i128", "u64_digit", "serde"], package = "num-bigint-dig" }
num-traits = "^0.2.6"
num-integer = "0.1.39"
num-iter = "0.1.37"
rand = "0.6"
failure = "0.1"
failure_derive = "0.1"
blake2 = "0.8.0"
generic-array = "0.12.0"
byteorder = "1.2.7"
bitvec = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.2.0"
classgroup = { git = "https://github.com/stichtingorganism/classygroup" }


[dev-dependencies]
criterion = "0.2"
sha2 = "0.8"
rand_chacha = "0.1"

[[bench]]
name = "accumulators_benchmarks"
harness = false
