[package]
name = "accumulators"
version = "0.1.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dignifiedquire/rust-accumulators"
repository = "https://github.com/dignifiedquire/rust-accumulators"
keywords = []

[dependencies]
num-bigint = { version = "0.8", package = "num-bigint-dig", features = ["rand", "i128", "u64_digit", "serde", "prime"] }
num-traits = "^0.2.6"
num-integer = "0.1.39"
num-iter = "0.1.37"
rand = "0.8"
failure = "0.1"
failure_derive = "0.1"
blake2 = "0.10"
generic-array = "0.14"
byteorder = "1.2.7"
bitvec = "1"

[dependencies.serde]
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]


[dependencies.classygroup]
optional = true
git = "https://github.com/stichtingorganism/classygroup"


[dev-dependencies]
criterion = "0.2"
rand_chacha = "0.3"


[[bench]]
name = "accumulators_benchmarks"
harness = false


[features]
default = ["rsa_group"]
class_group = ["serde", "classygroup"]
rsa_group = []